Increased mobile touch start size on footer git link and fixed it's focus color change. Added higher contrasting color for focus outlines.

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,7 +88,7 @@ a:focus-visible,
 button:focus-visible,
 input:focus-visible,
 textarea:focus-visible {
-	outline: 2px solid $lightPurple;
+	outline: 2px solid #6F00F7;
 }
 .fa,
 .fa-regular,
